syntax = "proto3";

package com.example.ajaxonboardingproject;

option java_multiple_files = true;

message CinemaHallProto {
  int32 capacity = 1;
  string description = 2;
}

message CinemaHallResponse {
  CinemaHallProto cinema_hall = 1;
}

message CinemaHallRequest {
  CinemaHallProto cinema_hall = 1;
}
